work on graphql